err/pygeometry.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyContracts-1.8.2.egg-info'...
Listing './lib/python3.5/site-packages/PyGeometry-1.3.egg-info'...
Listing './lib/python3.5/site-packages/contracts'...
Listing './lib/python3.5/site-packages/contracts/library'...
Listing './lib/python3.5/site-packages/contracts/testing'...
Listing './lib/python3.5/site-packages/contracts/testing/library'...
Listing './lib/python3.5/site-packages/contracts/useful_contracts'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/geometry'...
Listing './lib/python3.5/site-packages/geometry/distances'...
Listing './lib/python3.5/site-packages/geometry/manifolds'...
Listing './lib/python3.5/site-packages/geometry/manifolds/tests'...
Compiling './lib/python3.5/site-packages/geometry/manifolds/tests/__init__.py'...
***   File "./lib/python3.5/site-packages/geometry/manifolds/tests/__init__.py", line 67
    arguments=lambda (M, p, i, n): (M, p),  # @UnusedVariable
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geometry/manifolds/todo'...
Compiling './lib/python3.5/site-packages/geometry/mds_algos.py'...
***   File "./lib/python3.5/site-packages/geometry/mds_algos.py", line 70
    print n, eigvals
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/geometry/subspaces'...
Listing './lib/python3.5/site-packages/geometry/unittests'...
Listing './lib/python3.5/site-packages/geometry/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
